force-app/main/default/objects/KimbleOne__PurchaseOrderRule__c/KimbleOne__PurchaseOrderRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Purchase Order Rule</label>
    <nameField>
        <label>Purchase Order Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>