force-app/main/default/objects/KimbleOne__PurchaseOrderRule__c/fields/KimbleOne__CapPOAllocationByRevenueType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CapPOAllocationByRevenueType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cap PO Allocation By Revenue Type</label>
    <type>Checkbox</type>
</CustomField>