force-app/main/default/objects/KimbleOne__PurchaseOrderRule__c/fields/KimbleOne__IsExpensesPOCoverRequired__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsExpensesPOCoverRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Expenses PO Cover Required</label>
    <type>Checkbox</type>
</CustomField>