force-app/main/default/objects/KimbleOne__PurchaseOrderRule__c/fields/KimbleOne__IsServicesPOCoverRequired__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsServicesPOCoverRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Services PO Cover Required</label>
    <type>Checkbox</type>
</CustomField>